--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.7.7",
     "caniuse-lite": "^1.0.30001660",
     "dotenv": "^16.4.5",
     "firebase": "^10.7.1",
